--- a/setting.html
+++ b/setting.html
@@ -78,7 +78,7 @@
       </header>
 
       <!-- Form -->
-      <form action="typing_test" method="get">
+      <form action="typing_test1" method="get">
         <!-- Time Selection -->
         <div class="mb-3">
           <label for="time" class="form-label">Select Time</label>
